# poodtam

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.py
.github/workflows/: azure-static-web-apps-orange-stone-0abc0ae00.yml
chatbot/: __init__.py  dataset.py  query_df.py  sentence_model.py
chatbot/csv/: Hatyai_restaurant.xlsx
poodtam/: default_settings.py
poodtam/cmd/: web.py
poodtam/models/: __init__.py  chats.py  oauth.py  users.py
poodtam/web/: __init__.py  acl.py  oauth.py
poodtam/web/forms/: accounts.py
poodtam/web/templates/accounts/: edit.html  login.html  register.html
poodtam/web/templates/base/: base-layout.html  default-dashboard.html  default-page.html  html-renderer.html
poodtam/web/templates/components/: back-to-top.html  menu-bar.html  message.html  navbar.html  quick-reply.html
poodtam/web/templates/dashboard/: index.html
poodtam/web/views/: accounts.py  dashboard.py
scripts/: format.sh  run-web
