[tool.poetry]
name = "poodtam"
version = "0.0.1"
description = ""
authors = ["alkaline1024"]

[tool.poetry.dependencies]
python = "~3.11"
authlib = "^1.1.0"
werkzeug = "^2.0.1"
flask = "^2.0.1"
flask-Login = "^0.6.0"
flask-me = "^1.0.2"
flask-wtf = "^1.1.1"
watchdog = "^2.1.3"
wtform = "^1.0"
pillow = "^9.1.0"
brython = "^3.10.7"
requests = "^2.28.1"
markdown = "^3.4.1"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
lxml = "^4.9.3"
pandas = "^2.1.1"
selenium = "^4.14.0"
sentence-transformers = "^2.2.2"
openpyxl = "^3.1.2"
flask-bcrypt = "^1.0.1"
email-validator = "^2.0.0.post2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"

[tool.poetry.scripts]
poodtam-web = "poodtam.cmd.web:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
